# gladius

./: .gitignore  .gitmodules  CAD_VIEW_SHORTCUTS.md  README.md  release_notes.md
gladius/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE  MCP_IMPLEMENTATION.md  create_bom.sh  test_shared_library_install.sh  url  vcpkg.json  vcpkg.json.in
gladius/.serena/: project.yml
gladius/.serena/memories/: coding_standards.md  mcp_integration.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_workflow.md
gladius/cmake/: Coverage.cmake
gladius/cmake/desktop/: gladius.desktop.in
gladius/documentation/: GraphImplementationComparison.md
gladius/documentation/manuals/: MCP_IMPLEMENTATION_SUMMARY.md  MCP_TOOL_IMPROVEMENTS.md  user-guide.md
gladius/examples/: AdjacencyListGraphExample.cpp  template.3mf
gladius/examples/implicit/: 3mf-implicit.3mf  RadialRadiator.3mf  SphereInACage.3mf
gladius/scripts/git-hooks/: pre-commit
gladius/src/: Application.cpp  Application.h  BBox.h  BackupManager.cpp  BackupManager.h  BeamBVH.cpp  BeamBVH.h  BeamLatticeOptimizations.h  BeamLatticeResource.cpp  BeamLatticeResource.h  BeamLatticeVoxelAcceleration.cpp  BeamLatticeVoxelAcceleration.h  BitmapChannel.cpp  BitmapChannel.h  BitmapLayer.h  Buffer.h  CLMath.cpp  CLMath.h  CLProgram.cpp  CLProgram.h  CMakeLists.txt  CliReader.cpp  CliReader.h  CliWriter.cpp  CliWriter.h  ComputeContext.cpp  ComputeContext.h  ConfigManager.cpp  ConfigManager.h  Contour.h  ContourExtractor.cpp  ContourExtractor.h  Document-token.cpp  Document.cpp  Document.h  EventLogger.cpp  EventLogger.h  ExpressionParser.cpp  ExpressionParser.h  ExpressionToGraphConverter.cpp  (+67 more)
gladius/src/api/: CMakeLists.txt  Gladius.xml
gladius/src/compute/: CMakeLists.txt  ComputeCore.cpp  ComputeCore.h  ComputeCore.h.new  ProgramManager.cpp  ProgramManager.h  Rendering.cpp  Rendering.h  types.h
gladius/src/contour/: CMakeLists.txt  ContourValidator.cpp  ContourValidator.h  PointsToContour.cpp  PointsToContour.h  QuadTree.cpp  QuadTree.h  utils.cpp  utils.h
gladius/src/io/: CMakeLists.txt  IExporter.h  ImageStackExporter.cpp  ImageStackExporter.h  ImporterVdb.cpp  ImporterVdb.h  LayerBasedMeshExporter.cpp  LayerBasedMeshExporter.h  MeshExporter.cpp  MeshExporter.h  MeshExporter3mf.cpp  MeshExporter3mf.h  VdbImporter.cpp  VdbImporter.h  vdb.h
gladius/src/kernel/: .clang-format  CNanoVDB.h  arguments.h  commands.cl  distanceUpDown.cl  dynamic_interface.h  model.cl  renderer.cl  renderer.h  rendering.cl  rendering.h  sampler.h  sdf.cl  sdf.h  sdf_generator.cl  sdf_generator.h  types.h
gladius/src/kernels/: beam_lattice_kernels.cl
gladius/src/mcp/: ApplicationMCPAdapter.cpp  ApplicationMCPAdapter.cpp.bck  ApplicationMCPAdapter.h  CoroMCPAdapter.cpp  CoroMCPAdapter.h  FunctionGraphDeserializer.cpp  FunctionGraphDeserializer.h  FunctionGraphSerializer.cpp  FunctionGraphSerializer.h  MCPApplicationInterface.h  MCPServer.cpp  MCPServer.cpp.backup  MCPServer.h
gladius/src/nodes/: Assembly.cpp  Assembly.h  BuildItem.cpp  BuildItem.h  BuildParameter.h  Builder.cpp  Builder.h  ClonableNode.h  Commands.h  Component.cpp  Component.h  Components.cpp  Components.h  DerivedNodes.cpp  DerivedNodes.h  FunctionExtractor.cpp  FunctionExtractor.h  GraphFlattener.cpp  GraphFlattener.h  History.cpp  History.h  LowerFunctionGradient.cpp  LowerFunctionGradient.h  LowerNormalizeDistanceField.cpp  LowerNormalizeDistanceField.h  Model.cpp  Model.h  ModelUtils.cpp  ModelUtils.h  NodeBase.cpp  NodeBase.h  NodeFactory.cpp  NodeFactory.h  NodesWithSpezializedAccesors.h  Object.cpp  Object.h  OptimizeOutputs.cpp  OptimizeOutputs.h  OutputPortReferenceAnalyzer.cpp  OutputPortReferenceAnalyzer.h  (+16 more)
gladius/src/ui/: AboutDialog.cpp  AboutDialog.h  BaseExportDialog.cpp  BaseExportDialog.h  BeamLatticeView.cpp  BeamLatticeView.h  BuildItemView.cpp  BuildItemView.h  CliExportDialog.cpp  CliExportDialog.h  ComponentsObjectView.cpp  ComponentsObjectView.h  ExpressionDialog.cpp  ExpressionDialog.h  FileChooser.cpp  FileChooser.h  GLView.cpp  GLView.h  ImageStackExportDialog.cpp  ImageStackExportDialog.h  InputList.cpp  InputList.h  LevelSetView.cpp  LevelSetView.h  LibraryBrowser.cpp  LibraryBrowser.h  LinkColors.h  LogView.cpp  LogView.h  MainWindow.cpp  MainWindow.h  MainWindowConfig.cpp  MainWindowRecentFiles.cpp  MeshExportDialog.cpp  MeshExportDialog.h  MeshExportDialog3mf.cpp  MeshExportDialog3mf.h  MetaDataView.cpp  MetaDataView.h  ModelEditor.cpp  (+35 more)
gladius/tests/: CMakeLists.txt
gladius/tests/integrationtests/: CMakeLists.txt  GladiusLib_tests.cpp  MCP_tests.cpp  Slice_tests.cpp  Writer3mf_SaveAs_tests.cpp  main.cpp  testdata.h  testhelper.cpp  testhelper.h
gladius/tests/unittests/: ApplicationMCPAdapter_Rollback_tests.cpp  ApplicationMCPAdapter_tests.cpp  Builder_tests.cpp  (+47 more)
gladius/thegreatplan/: 3mf-volumetric-implementation.md  3mf_beam_lattice_bvh_implementation_plan.md  ApplicationMCPAdapter_Refactoring_Plan.md  ApplicationMCPAdapter_Refactoring_Summary.md  FunctionGradientExtension.md  FunctionGradientLowering.md  NormalizeDistanceFieldNode.md  README.md  architecture_alternatives_analysis.md  beam-lattice-voxel-acceleration-summary.md  beam-lattice-voxel-implementation-complete.md  beam_lattice_implementation_status.md  beam_lattice_quick_start.md  beam_lattice_resource_id_fix.md  best_architecture_decision.md  concurrent_architecture_plan.md  gradient_node_plan.md  implementation_guide.md  libcoro_analysis.md  mcp_framework_analysis.md  mcp_graph_manipulation_tools_plan.md  mcp_implementation_strategy.md  mcp_research_similar_applications.md  mcp_server_implementation_plan.md  mcp_tools_comprehensive_plan.md  mcp_tools_quick_reference.md  more_ideas.md  mvp_status.md  phase1_tools_implementation_review.md  resource_key_type_enhancement.md  task_1_automatic_compilation_plan.md  task_1_node_editor_auto_layout_grouping_plan.md  task_2_muparser_expression_parsing_plan.md  task_2_symengine_expression_parsing_plan.md  todo.md
gladius/vcpkg-triplets/: x64-linux-gladius.cmake  x64-windows-gladius.cmake
(+197 files in other folders)
